tests/calico_testcases/example_policies/testcase10/testcase10-local-networkpolicies.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase10-allowAll-kube-system
  namespace: kube-system
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow

---
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: testcase10-allowAll-default
  namespace: default
spec:
  types:
  - Ingress
  - Egress
  ingress:
  - action: Allow
  egress:
  - action: Allow
